--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -32,13 +32,15 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+/* Removed this style because the base style was the same as the change listed here. */
+/* .header div ul {
     list-style-type: none;
-}
+} */
 
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
+    list-style-type: none;
 }
 
 a {
@@ -100,8 +102,12 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-lead h3 {
+h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+/* Consolidated all of these into just the "h3" class rather than individually affected each classes heading. */
+/* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -114,7 +120,7 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
 .benefit-lead img {
     display: block;
@@ -161,9 +167,15 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+img {
     max-height: 200px;
 }
+/* Because of the earlier images are written into the class code they are a part of making this "img" style only affects the three images listed below. */
+
+/* .search-engine-optimization img {
+    max-height: 200px;
+}
+
 
 .online-reputation-management img {
     max-height: 200px;
@@ -171,9 +183,15 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
+} */
+
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
-.search-engine-optimization h2 {
+/* The same changes as made to the h3 section */
+/* .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -186,15 +204,17 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    
 }
 
 .footer h2 {
+    margin-bottom: 0;
     font-size: 20px;
 }
