--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -15,16 +15,17 @@ body {
     color: #ffffff;
 }
 
-.header h1 {
+/* there's only one h1 so no need for the header class before it */
+h1 {
     display: inline-block;
     font-size: 48px;
 }
-
-.header h1 .seo {
+/* changed seo to an id and applied the color to it. */
+#seo {
     color: #d9dcd6;
 }
 
-.header div {
+.header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,12 +33,12 @@ body {
     font-size: 20px;
 }
 
-/* Removed this style because the base style was the same as the change listed here. */
-/* .header div ul {
+/* added this id to the ul to remove extra categories */
+#rbsg {
     list-style-type: none;
-} */
-
-.header div ul li {
+}
+/* added this class to li to do the same thing as listed above */
+.header-list-item {
     display: inline-block;
     margin-left: 25px;
     list-style-type: none;
@@ -64,11 +65,13 @@ p {
 .float-left {
     float: left;
     margin-right: 25px;
+    max-height: 200px;
 }
 
 .float-right {
     float: right;
     margin-left: 25px;
+    max-height: 200px;
 }
 
 .content {
@@ -102,11 +105,33 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* The same changes as made to the h3 section */
+/* .search-engine-optimization h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+} */
+
 h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/* Consolidated all of these into just the "h3" class rather than individually affected each classes heading. */
+/* Consolidated all of these into just "h3" rather than individually affecting each classes heading. */
 /* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -122,7 +147,13 @@ h3 {
     text-align: center;
 } */
 
-.benefit-lead img {
+.borderimg {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -138,7 +169,7 @@ h3 {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
 .search-engine-optimization {
     margin-bottom: 20px;
@@ -167,10 +198,7 @@ h3 {
     color: #ffffff;
 }
 
-img {
-    max-height: 200px;
-}
-/* Because of the earlier images are written into the class code they are a part of making this "img" style only affects the three images listed below. */
+/* Moved the max-height into the float-left/float-right classes.*/
 
 /* .search-engine-optimization img {
     max-height: 200px;
@@ -185,26 +213,7 @@ img {
     max-height: 200px;
 } */
 
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
-/* The same changes as made to the h3 section */
-/* .search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
