created the main parts of html as well as styled most of them/played with formatting in css

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -41,7 +41,7 @@ h1 {
 .header-list-item {
     display: inline-block;
     margin-left: 25px;
-    list-style-type: none;
+    /* list-style-type: none; */
 }
 
 a {
